tests/NormalTests/paczka2/big_fuzzy/75338759.err
Error in line 11: 5b8 A591 14,9
Error in line 15: 5b8 S734 67,9
Error in line 21: S734 A337 -2,3
Error in line 26: DuXI13HlEDV S496 16,99
Error in line 43: DuXI13HlEDV S496 -2,7
Error in line 12: S734 A337 33,8
Error in line 50: S734 S496 3c2,3
Error in line 49: S734 S496 96,1
Error in line 57: K08W08 A337 3,75
Error in line 65: z7Uhx A59> >42,4
Error in line 56: S734 S734 81,3
Error in line 55: z7Uhx A591 51,8
Error in line 76: aASOZII A591 108,9
Error in line 73: 5b8 S734 7,1
Error in line 81: K08W08 w734 10,9
Error in line 69: S734 S496 33,0
Error in line 82: aASOZII A337 77,8
Error in line 86: S734 S734 82,1
Error in line 90: aASOZII S734 31,9
Error in line 94: aASOZII S496 25,8
Error in line 92: S734 A591 80,2
Error in line 96: aASOZII S734 51,4
Error in line 88: KBCEZy7ke S496 62,1
Error in line 106: KBCEZy7ke A337 75,9
Error in line 114: S34 S496 16,6
Error in line 115: z7Uhx S496 99,5
Error in line 118: aASOZII S496 87,9
Error in line 122: KBCEZy7ke A337 33,0
Error in line 111: 5b8 S496 62,9
Error in line 123: aASOZII A591 86,2
Error in line 147: DuXI13HlEDV A591 20,2
Error in line 151: aASOZII A591 53,7
Error in line 154: aASOZII S496 42,3
Error in line 155: DuXI13HlEDV A337 92,2
Error in line 176: z7Uhx A591 56,6
Error in line 182: S734 S734 37,5
Error in line 178: aASOZII S734 65,6
Error in line 183: S734 S496 0,3
Error in line 185: aASOZII A591 94,3
Error in line 188: 5b8 A591 89,2
Error in line 193: aASOZII A337 41,1
Error in line 204: K08W08 A591 32,7
Error in line 205: K08W08 S496 62,9
Error in line 218: S734 A337 20,7
Error in line 231: DuXI13HlEDV S496 209,64
Error in line 226: K08W08 A337 14,0
Error in line 238: K08W08 S734 93,3
Error in line 232: 5b8 S734 31,1
Error in line 244: S734 S496 26,0
Error in line 245: S734 A591 55,0
